# katharsis.com

./: .env  .gitignore  README.general.md  README.md  copier.yml  docker-compose-bd.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 764bda187091_initialize_models.py  764bda187092_add_tenants_and_fk.py  7a4b41dd1b8b_add_products_table.py
backend/app/api/: deps.py  main.py
backend/app/api/auth/router/: auth_routers.py
backend/app/api/auth/routers/: auth_routers.py
backend/app/api/category/model/: category_models.py
backend/app/api/category/repository/: category_crud.py
backend/app/api/category/router/: category_routers.py
backend/app/api/product/model/: product_models.py
backend/app/api/product/repository/: product_crud.py
backend/app/api/product/router/: product_routers.py
backend/app/api/role/application/: role_service.py
backend/app/api/role/domain/: role_models.py
backend/app/api/shared/aggregate/infrastructure/repository/sql/: sql_alchemy_aggregate_root_repository.py
backend/app/api/shared/domain/: document_type.py
backend/app/api/shared/infrastructure/: context.py
backend/app/api/shared/service/: email_service.py
backend/app/api/tenant/application/: tenant_service.py
backend/app/api/tenant/domain/: tenant_models.py
backend/app/api/tenant/model/: tenant_models.py
backend/app/api/user/application/: auth_service.py
backend/app/api/user/application/auth/: auth_service.py  two_factor_service.py
backend/app/api/user/domain/: auth_models.py  user_models.py
backend/app/api/user/infrastructure/http/auth/: auth_routers.py
backend/app/api/user/infrastructure/http/user/: user_routers.py
backend/app/api/user/model/: user_models.py
backend/app/api/user/repository/: user_crud.py
backend/app/api/user/router/: user_routers.py
backend/app/core/: config.py  db.py  security.py
backend/scripts/: prestart.sh
frontend/: .eslintrc.js  .prettierrc  Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/public/: noise.avif
frontend/public/images/: katharsis.com_frontend_public_images_icon.webp at main · srvenient_katharsis.com.html
frontend/src/: App.tsx  index.css  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  test.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/hooks/: useAuthSync.ts
frontend/src/app/onboarding/: layout.tsx
frontend/src/common/health/: health-check.ts
frontend/src/common/http-client/: fastapi.http-client.ts  http-client.ts
frontend/src/config/: config.ts  index.ts  local.ts  prod.ts  stg.ts
frontend/src/layouts/: Layout.astro
frontend/src/pages/: 404.astro  index.astro
frontend/src/styles/: global.css
scripts/: README.md  deploy.sh
(+111 files in other folders)
