[project]
name = "katharsis-backend"
version = "0.0.1"
description = "In a world where efficiency and organization are key to success, we present an Inventory Management System designed to streamline inventory control, reduce costs, and enhance productivity."
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "alembic>=1.16.5",
    "fastapi-mail>=1.5.7",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "python-jose[cryptography]>=3.5.0",
    "qrcode[pil]>=8.2",
    "sentry-sdk[fastapi]>=2.34.1",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "mypy>=1.17.1",
    "ruff>=0.12.8",
    "pre-commit>=4.3.0",
    "types-passlib>=1.7.7.20250602",
    "coverage>=7.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["app"]
